--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <p>hello world</p>
 
-<a href="second.html">click here to go to the second page </a> 
+<a href="third.html">click here to go to the second page </a> 
