--- a/third.html
+++ b/third.html
@@ -1,2 +1,8 @@
 <p>hello</p>
 <a href="index.html">click here to go to the first page </a> 
+
+<html>
+  <body>
+    <p>This is the second page</p>
+  </body>
+</html>
