--- a/third.html
+++ b/third.html
@@ -1,3 +1,9 @@
-<p>hello</p>
+<html>
+  <body>
+    <p>This is the second page</p>
+    <p>hello</p>
 <a href="index.html">click here to go to the first page </a> 
+  </body>
+</html>
+
 
