--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<head>
+  <script src="jquery.js"></script>
+</head>
+
+
 <p>hello world</p>
 
 <a href="third.html">click here to go to the second page </a> 
